base/infra/argocd/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.my-homelab.party`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
